# pyspark-kb

./: OptimizingShuffleforJoinswithSkewedData.py  README.md  filterAndCount.py  findOverlapInJsonData.py  overlap_using_df.py  overlapfind.py  pyproject.toml  word_count.py
basic/: join_rdd.py  map_usage.py  word_count.py
data/: dataset1.json  dataset2.json  file1  file2  join2
data/filter_count/: logs.csv
data/wordcount/: input.txt
path/to/output.json/: .part-00000-7d716741-ebf1-47bd-a7ca-6216c0bfba1a-c000.json.crc  part-00000-7d716741-ebf1-47bd-a7ca-6216c0bfba1a-c000.json
