[project]
name = "example"
version = "1.0.0"
description = "pyspark"
authors = [
    {name = "Narendra"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.5.4"
ipykernel = "^6.29.5"

